--- a/config.toml
+++ b/config.toml
@@ -10,3 +10,12 @@ Port = 8088
 
 [Log]
 Level = "debug"
+
+[Database]
+
+[Database.MySQL]
+Host = "localhost"
+Port = 3306
+Database = "demos"
+Username = "root"
+Password = "root"
