--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ KeyLong = 6
 ImgWidth = 240 #验证码宽度
 ImgHeight = 80 # 验证码高度
 OpenCaptcha = 0 # 防爆破验证码开启此数，0代表每次登录都需要验证码，其他数字代表错误密码此数，如3代表错误三次后出现验证码
-OpenCaptchaTimeOut = 1h # 防爆破验证码超时时间，单位：s(秒)
+OpenCaptchaTimeOut = "1h"  # 防爆破验证码超时时间，单位：s(秒)
 
 [Storage]
 Driver = "local"
